# RPI-cam_system

./: LICENSE.md  README.md
src/: gpio.cpp  gpio.h  picture.cpp  serial.cpp  sim900.cpp
sw/: CMakeLists.txt
sw/cam-system/: CMakeLists.txt
sw/cam-system/src/: base64.cpp  common.cpp  common.h  ds18b20.cpp  ds18b20.h  gpio.cpp  gpio.h  picture.cpp  picture.h  serial.cpp  settings.cpp  settings.h  sim900.cpp  sim900.h
sw/cam-system/src/simpleini/: SimpleIni.h
sw/cam-wake/: CMakeLists.txt
sw/cam-wake/src/: common.h  gpio.c  gpio.h  interrupts.c  interrupts.h  main.c  threads.c  threads.h
sw/src/: base64.h  common.cpp  common.h  ds18b20.cpp  ds18b20.h  logger.cpp  logger.h  picture.cpp  picture.h  serial.h  sim900.cpp  sim900.h
